show and hide password add , confirm password add, profile page for adding data create, profile page view create