@@ -1,33 +1,49 @@
 package com.KurdDevs.KurdDevs.service;
 
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.util.UUID;
 
 @Service
 public class FileStorageService {
 
-    private static final String UPLOAD_DIR = "uploads";
+    @Value("${upload.directory}")
+    private String uploadDirectory;
 
-    public void saveFile(MultipartFile file, String fileName) throws IOException {
-        // Create the upload directory if it doesn't exist
-        Path uploadDir = Path.of(UPLOAD_DIR);
-        if (!Files.exists(uploadDir)) {
-            Files.createDirectories(uploadDir);
+    public Resource loadFileAsResource(String fileName) throws IOException {
+        Path filePath = Paths.get(uploadDirectory).resolve(fileName).normalize();
+        Resource resource = new UrlResource(filePath.toUri());
+
+        if (resource.exists() && resource.isReadable()) {
+            return resource;
+        } else {
+            throw new FileNotFoundException("PDF CV not found or cannot be read: " + fileName);
+        }
+    }
+    public String saveFile(MultipartFile file) throws IOException {
+        String fileName = UUID.randomUUID().toString() + "_" + file.getOriginalFilename();
+        String filePath = uploadDirectory + fileName;
+
+        Path directoryPath = Paths.get(uploadDirectory);
+        if (!Files.exists(directoryPath)) {
+            Files.createDirectories(directoryPath);
         }
 
-        // Save the file to the upload directory
-        Path filePath = uploadDir.resolve(fileName);
-        Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+        Path targetPath = Paths.get(filePath);
+        Files.copy(file.getInputStream(), targetPath, StandardCopyOption.REPLACE_EXISTING);
+
+        return fileName;
     }
 
-    public byte[] getFileBytes(String fileName) throws IOException {
-        // Read the file bytes from the upload directory
-        Path filePath = Path.of(UPLOAD_DIR, fileName);
-        return Files.readAllBytes(filePath);
-    }
+    // Rest of the service methods
 }
